# financial-emails-parser

./: .env  .env.example  CLAUDE.md  debug_paisabazaar.html  indian_credit_cards_all_paginated.json  indian_credit_cards_scraped.json  indian_credit_cards_structured.json  main.py  output-1.json  output-100-emails.json  output-500-emails.json  output-6-months-no-limit.json  pyproject.toml  requirements.txt
auth/: google_auth.py
services/: analytics_service.py  async_processor.py  email_classifier.py  email_parser.py  fetch-indian-credit-cards-simple.py  fetch-indian-credit-cards.py  gmail_service.py  intelligent_extractor.py  manual-scraped-credit-cards.json  transaction_extractor.py
static/: index.html
